Remove unsafe from the code, part 2 - FieldAccessor migration begins